bookmarkplugin: fixed wrong position of bookmarks dropdown on Internet Explorer 7
git-svn-id: https://trac-hacks.org/svn@11898 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/bookmarkplugin/trunk/tracbookmark/htdocs/css/tracbookmark.css
+++ b/bookmarkplugin/trunk/tracbookmark/htdocs/css/tracbookmark.css
@@ -1,3 +1,6 @@
+#ctxtnav #bookmark_menu {
+    *position: relative;
+}
 #ctxtnav #bookmark_menu > ul {
     display: none;
 }
@@ -22,6 +25,8 @@
     position: absolute;
     z-index: 2;
     right: 0.75em;
+    *top: 1.2em;
+    *right: 0;
 }
 
 #bookmark_this {
